<resources>
    <string name="app_name">Weather App</string>
    <string name="minimum_label">Минимум:</string>
    <string name="maximum_label">Максимум:</string>
    <string name="feels_like_label">Ощущается как:</string>
    <string name="weather_icon_description">Иконка погоды</string>
    <string name="precipitation_icon_description">Иконка осадков</string>
    <string name="wind_icon_description">Иконка ветра</string>
    <string name="weather_in">Погода в:</string>
</resources>